--- a/addContact.html
+++ b/addContact.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Contact</title>
 
-    <link rel="stylesheet" type="text/css" href="/css/general_css_classes.css">
-    <link rel="stylesheet" type="text/css" href="/css/addContact.css">
-    <link rel="stylesheet" href="/css/addContactResponsive.css">
+    <link rel="stylesheet" type="text/css" href="../join/css/general_css_classes.css">
+    <link rel="stylesheet" type="text/css" href="../join/css/addContact.css">
+    <link rel="stylesheet" href="../join/css/addContactResponsive.css">
     
 
     <!-- customize Font -->
@@ -38,11 +38,11 @@
 
 
     <!-- JS-functions -->
-    <script src="js/addContact.js"></script>
-    <script src="js/storage.js"></script>
-    <script src="js/editContact.js"></script>
-    <script src="js/edit-add-Contact-CSS-functions.js"></script>
-
+    <script src=".js/addContact.js"></script>
+    <script src=".js/storage.js"></script>
+    <script src=".js/editContact.js"></script>
+    <script src="./js/edit-add-Contact-CSS-functions.js"></script>
+    <script src="./script.js"></script>
 
 
 
@@ -55,23 +55,23 @@
     <div id="overlay-add-contact" class="overlay-add-contact-outer-div display-none">
         <div class="overlay-add-contact">
             <div onclick=" emptyInputfields(),closeAddContactOverlay(), showCreateContactBtns(), displayNone('add-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove'), displayNone('edit-contact-img-mobile-div', 'remove'), displayFlex('show-contact', 'remove')" class="close-div">
-                <img src="assed/svg/contact-imgs/close.svg" alt="" class="close-img">
+                <img src="./assed/svg/contact-imgs/close.svg" alt="" class="close-img">
             </div>
 
             <div class="person-img-group13">
-                <img src="assed/svg/\contact-imgs/person.svg" alt="" class="person-img">
+                <img src="./assed/svg/\contact-imgs/person.svg" alt="" class="person-img">
             </div>
 
             <div id="cancel-create-contact" class="cancel-create-contact">
                 <button onclick="emptyInputfields() ,closeAddContactOverlay()" class="cancel-btn">
                     <div class="cancel-btn-txt">Cancel</div>
-                    <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
+                    <img src="./assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
                 </button>
 
                 <button onclick="addContact(), closeAddContactOverlay(), displayNone('add-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove')" class="create-contact-btn">
                     <div class="create-contact-txt">Create contact</div>
                     <div class="create-contact-bounding-box-img">
-                        <img src="assed/svg/contact-imgs/check.svg" alt="" class="create-contact-img">
+                        <img src="./assed/svg/contact-imgs/check.svg" alt="" class="create-contact-img">
                     </div>
                 </button>
             </div>
@@ -81,14 +81,14 @@
             <div id="edit-contact" class="edit-contact display-none">
                 <button onclick="emptyInputfields() ,closeAddContactOverlay(), displayNone('edit-contact', 'add'), displayNone('cancel-create-contact', 'remove'), displayNone('edit-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove'), displayFlex('show-contact', 'remove'), removeContact()" class="delete-btn">
                     <div class="cancel-btn-txt">Delete</div>
-                    <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
+                    <img src="./assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
                 </button>
 
                 <button onclick="removeContact(), addContact(), displayNone('edit-contact', 'add'), displayNone('cancel-create-contact', 'remove'), displayNone('edit-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove'), displayFlex('show-contact', 'remove'), closeAddContactOverlay()"
                     class="save-edits-contact-btn">
                     <div class="create-contact-txt">Save</div>
                     <div class="create-contact-bounding-box-img">
-                        <img src="assed/svg/contact-imgs/check.svg" alt="" class="save-edits-contact-img">
+                        <img src="./assed/svg/contact-imgs/check.svg" alt="" class="save-edits-contact-img">
                     </div>
                 </button>
             </div>
