--- a/addtask.html
+++ b/addtask.html
@@ -7,19 +7,19 @@
   <title>addtask</title>
 
   <!-- customize Stylefiles-->
-  <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
-  <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
-  <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
-  <link rel="stylesheet" href="/css/header_mobile.css">
-  <link rel="stylesheet" href="/css/sidebar_mobile.css">
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
-  <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
-  <link rel="stylesheet" type="text/css" href="/css/draggablecards.css">
-  <link rel="stylesheet" type="text/css" href="/css/board.css">
-  <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
-  <link rel="stylesheet" type="text/css" href="/css/addContact.css">
-  <link rel="stylesheet" type="text/css" href="/css/addtask.css">
-  <link rel="stylesheet" href="/css/addContactResponsive.css">
+  <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
+  <link rel="stylesheet" type="text/css" href="css/generalElements.css">
+  <link rel="stylesheet" type="text/css" href="css/sidebar.css">
+  <link rel="stylesheet" href="css/header_mobile.css">
+  <link rel="stylesheet" href="css/sidebar_mobile.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/styleguide.css">
+  <link rel="stylesheet" type="text/css" href="css/draggablecards.css">
+  <link rel="stylesheet" type="text/css" href="css/board.css">
+  <link rel="stylesheet" type="text/css" href="css/contactsDefault.css">
+  <link rel="stylesheet" type="text/css" href="css/addContact.css">
+  <link rel="stylesheet" type="text/css" href="css/addtask.css">
+  <link rel="stylesheet" href="css/addContactResponsive.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -53,7 +53,7 @@
 
   <!-- Favivon -->
 
-  <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="assed/svg/favicon.svg" type="image/svg+xml">
 
 
 </head>
