--- a/contact.html
+++ b/contact.html
@@ -7,18 +7,18 @@
     <title>Contact</title>
 
     <!-- customize Stylefiles-->
-    <link rel="stylesheet" type="text/css" href="/css/general_css_classes.css">
-    <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
-    <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
-    <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
-    <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
-    <link rel="stylesheet" href="/css/addContactResponsive.css">
-    <link rel="stylesheet" href="/css/header_mobile.css">
-    <link rel="stylesheet" href="/css/sidebar_mobile.css">
-    <link rel="stylesheet" href="/css/addContact.css">
-    <link rel="stylesheet" href="/css/contact_created_responsive.css">
+    <link rel="stylesheet" type="text/css" href="css/general_css_classes.css">
+    <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
+    <link rel="stylesheet" type="text/css" href="css/generalElements.css">
+    <link rel="stylesheet" type="text/css" href="css/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styleguide.css">
+    <link rel="stylesheet" type="text/css" href="css/contactsDefault.css">
+    <link rel="stylesheet" href="css/addContactResponsive.css">
+    <link rel="stylesheet" href="css/header_mobile.css">
+    <link rel="stylesheet" href="css/sidebar_mobile.css">
+    <link rel="stylesheet" href="css/addContact.css">
+    <link rel="stylesheet" href="css/contact_created_responsive.css">
 
     <!-- customize Font -->
 
@@ -52,13 +52,13 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
-    <script src="/js/addContact.js"></script>
-    <script src="/js/storage.js"></script>
-    <script src="/js/editContact.js"></script>
+    <script src="js/addContact.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/editContact.js"></script>
     <script src="js/edit-add-Contact-CSS-functions.js"></script>
     <!-- Favivon -->
 
-    <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="assed/svg/favicon.svg" type="image/svg+xml">
 
 
 
