--- a/singup.html
+++ b/singup.html
@@ -7,12 +7,12 @@
     <title>Join-Login</title>
 
     <!-- customize Stylefiles-->
-    <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
-    <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
-    <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
-    <link rel="stylesheet" href="/css/contactsDefault.css">
+    <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
+    <link rel="stylesheet" type="text/css" href="css/generalElements.css">
+    <link rel="stylesheet" type="text/css" href="css/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styleguide.css">
+    <link rel="stylesheet" href="css/contactsDefault.css">
 
     <!-- customize Font -->
 
@@ -50,7 +50,7 @@
 
     <!-- Favivon -->
 
-    <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="assed/svg/favicon.svg" type="image/svg+xml">
 
 
 </head>
@@ -59,19 +59,19 @@
     <div class="main-sing-up">
         <div class="join-logo" id="">
             <div>
-                <img src="/assed/svg/join_dark.svg" alt="">
+                <img src="assed/svg/join_dark.svg" alt="">
             </div>
         </div>
         <div class="singincard" id="">
             <div>
                 <a href="index.html">
-                <img src="/assed/svg/arrow-left.svg" alt="">
+                <img src="assed/svg/arrow-left.svg" alt="">
                 </a>
             </div>
             <div class="singincardcontent">
                 <div class="singup">
                     <p class="singup-p">Sing Up</p>
-                    <img src="/assed/svg/underlineLogIn.svg" alt="" class="singup-u">
+                    <img src="assed/svg/underlineLogIn.svg" alt="" class="singup-u">
                 </div>
                 <div class="frame-212">
                     <div class="frame-160">
@@ -79,28 +79,28 @@
                             <div class="frame-14">
                                 <input id="userName" type="email" class="form-control border-0 color-input" placeholder="Name"
                                     style="border: none; box-shadow: none;">
-                                <img src="/assed/svg/emailicon.svg" alt="" srcset="">
+                                <img src="assed/svg/emailicon.svg" alt="" srcset="">
                             </div>
                         </div>
                         <div class="frame-157">
                             <div class="frame-14">
                                 <input id="userEmail" type="email" class="form-control border-0 color-input" placeholder="Email"
                                     style="border: none; box-shadow: none;">
-                                <img src="/assed/svg/emailicon.svg" alt="" srcset="">
+                                <img src="assed/svg/emailicon.svg" alt="" srcset="">
                             </div>
                         </div>
                         <div class="frame-157">
                             <div class="frame-14">
                                 <input id="userpassword" type="password" class="form-control border-0 color-input" placeholder="Password"
                                     style="border: none; box-shadow: none;">
-                                <img src="/assed/svg/passwordicon.svg" alt="">
+                                <img src="assed/svg/passwordicon.svg" alt="">
                             </div>
                         </div>
                         <div class="frame-157">
                             <div class="frame-14">
                                 <input id="userpasswordconfirm" type="password" class="form-control border-0 color-input" placeholder="Confirm Password"
                                     style="border: none; box-shadow: none;">
-                                <img src="/assed/svg/passwordicon.svg" alt="">
+                                <img src="assed/svg/passwordicon.svg" alt="">
                             </div>
                         </div>
                     </div>
