--- a/board.html
+++ b/board.html
@@ -7,19 +7,19 @@
     <title>board</title>
 
     <!-- customize Stylefiles-->
-    <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
-    <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
-    <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
-    <link rel="stylesheet" href="/css/header_mobile.css">
-    <link rel="stylesheet" href="/css/sidebar_mobile.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
-    <link rel="stylesheet" type="text/css" href="/css/draggablecards.css">
-    <link rel="stylesheet" type="text/css" href="/css/board.css">
-    <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
-    <link rel="stylesheet" type="text/css" href="/css/addContact.css">
-    <link rel="stylesheet" type="text/css" href="/css/addtask.css">
-    <link rel="stylesheet" href="/css/addContactResponsive.css">
+    <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
+    <link rel="stylesheet" type="text/css" href="css/generalElements.css">
+    <link rel="stylesheet" type="text/css" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/header_mobile.css">
+    <link rel="stylesheet" href="css/sidebar_mobile.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styleguide.css">
+    <link rel="stylesheet" type="text/css" href="css/draggablecards.css">
+    <link rel="stylesheet" type="text/css" href="css/board.css">
+    <link rel="stylesheet" type="text/css" href="css/contactsDefault.css">
+    <link rel="stylesheet" type="text/css" href="css/addContact.css">
+    <link rel="stylesheet" type="text/css" href="css/addtask.css">
+    <link rel="stylesheet" href="css/addContactResponsive.css">
 
     <!-- customize Font -->
 
@@ -55,10 +55,10 @@
     <script src="js/add_task.js"></script>
     <script src="js/storage.js"></script>
 
-    <script src="/js/draggable-akademie.js"></script>
+    <script src="js/draggable-akademie.js"></script>
     <!-- Favivon -->
 
-    <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="assed/svg/favicon.svg" type="image/svg+xml">
 
 
 </head>
