--- a/impressum.html
+++ b/impressum.html
@@ -7,12 +7,12 @@
     <title>Contact</title>
 
     <!-- customize Stylefiles-->
-    <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
-    <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
-    <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
-    <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
+    <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
+    <link rel="stylesheet" type="text/css" href="css/generalElements.css">
+    <link rel="stylesheet" type="text/css" href="css/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styleguide.css">
+    <link rel="stylesheet" type="text/css" href="css/contactsDefault.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -41,11 +41,11 @@
 
     <!-- customize Scripts -->
     <script src="script.js"></script>
-    <script src="/js/addContact.js"></script>
-    <script src="/js/storage.js"></script>
+    <script src="js/addContact.js"></script>
+    <script src="js/storage.js"></script>
     <!-- Favivon -->
 
-    <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="assed/svg/favicon.svg" type="image/svg+xml">
 
 
 
