--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Join-Login</title>
 
     <!-- customize Stylefiles-->
-    <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
-    <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
-    <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
-    <link rel="stylesheet" href="/css/contactsDefault.css">
+    <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
+    <link rel="stylesheet" type="text/css" href="css/generalElements.css">
+    <link rel="stylesheet" type="text/css" href="css/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styleguide.css">
+    <link rel="stylesheet" href="css/contactsDefault.css">
 
     <!-- customize Font -->
 
@@ -50,7 +50,7 @@
 
     <!-- Favivon -->
 
-    <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="assed/svg/favicon.svg" type="image/svg+xml">
 
 
 </head>
@@ -59,14 +59,14 @@
     <div class="loginLogo">
         <div class="logoJoin" id="login-container-overlay">
             <div style="width: 274px; height: 334.07px; position: relative" id="loading-logo">
-                <img src="/assed/svg/join_logoBIG.svg" alt="">
+                <img src="assed/svg/join_logoBIG.svg" alt="">
             </div>
         </div>
         <div class="loginInput" id="login-container" style="display: none;">
             <div class="frame-153">
                 <div class="frame-159">
                     <p class="frame-159-text">Log in</p>
-                    <img src="/assed/svg/underlineLogIn.svg" alt="" class="s">
+                    <img src="assed/svg/underlineLogIn.svg" alt="" class="s">
                 </div>
                 <div class="frame-250">
                     <div class="log-in-frigma">
@@ -74,14 +74,14 @@
                             <div class="frame-14">
                                 <input id="userEmail" type="email" class="form-control border-0" placeholder="Email"
                                     style="border: none; box-shadow: none;">
-                                <img src="/assed/svg/emailicon.svg" alt="" srcset="">
+                                <img src="assed/svg/emailicon.svg" alt="" srcset="">
                             </div>
                         </div>
                         <div class="frame-157">
                             <div class="frame-14">
                                 <input id="userpassword" type="password" class="form-control border-0" placeholder="Password"
                                     style="border: none; box-shadow: none;">
-                                <img src="/assed/svg/passwordicon.svg" alt="">
+                                <img src="assed/svg/passwordicon.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="frame-176">
                     <button onclick="loginUser()" class="button-wo-icon text-sm-btn" type="button">Log in</button>
-                    <button class="button-secondary-wo-icon text-sm-btn" onclick="window.location.href='Summary.html'"
+                    <button class="button-secondary-wo-icon text-sm-btn" onclick="window.location.href='summary.html'"
                         type="button">Gust Log in</button>
                 </div>
             </div>
