--- a/board.html
+++ b/board.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
     <link rel="stylesheet" type="text/css" href="css/generalElements.css">
     <link rel="stylesheet" type="text/css" href="css/sidebar.css">
-    <link rel="stylesheet" href="css/header_mobile.css">
-    <link rel="stylesheet" href="css/sidebar_mobile.css">
+    <link rel="stylesheet" type="text/css" href="css/header_mobile.css">
+    <link rel="stylesheet" type="text/css" href="css/sidebar_mobile.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/styleguide.css">
     <link rel="stylesheet" type="text/css" href="css/draggablecards.css">
@@ -54,8 +54,8 @@
     <script src="script.js"></script>
     <script src="js/add_task.js"></script>
     <script src="js/storage.js"></script>
-
     <script src="js/draggable-akademie.js"></script>
+    
     <!-- Favivon -->
 
     <link rel="shortcut icon" href="assed/svg/favicon.svg" type="image/svg+xml">
@@ -70,7 +70,7 @@
     <div w3-include-html="assed/template/sidebar_mobile.html"></div>
     <div w3-include-html="assed/template/draggablecards.html"></div>
     <div class="floating-add-task-backlog-v-1 d-none" id="taskAddFormInBaord">
-        <div style="all: unset;" w3-include-html="assed/template/task_form.html"></div>        
+        <div style="all: unset;" w3-include-html="assed/template/task_form.html"></div>
     </div>
     <div id="fullTask" class="floatingTask d-none" w3-include-html="assed/template/fullTask.html"></div>
 
