--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
                     <div class="log-in-frigma">
                         <div class="frame-157">
                             <div class="frame-14">
-                                <input id="userEmail" type="email" class="form-control border-0" placeholder="Email"
+                                <input required id="userEmail" type="email" class="form-control border-0" placeholder="Email"
                                     style="border: none; box-shadow: none;">
                                 <img src="assed/svg/emailicon.svg" alt="" srcset="">
                             </div>
                         </div>
                         <div class="frame-157">
                             <div class="frame-14">
-                                <input id="userpassword" type="password" class="form-control border-0" placeholder="Password"
+                                <input required id="userpassword" type="password" class="form-control border-0" placeholder="Password"
                                     style="border: none; box-shadow: none;">
                                 <img src="assed/svg/passwordicon.svg" alt="">
                             </div>
