--- a/singup.html
+++ b/singup.html
@@ -70,7 +70,7 @@
             </div>
             <div class="singincardcontent">
                 <div class="singup">
-                    <p class="singup-p">Sing Up</p>
+                    <p class="singup-p">Sign Up</p>
                     <img src="assed/svg/underlineLogIn.svg" alt="" class="singup-u">
                 </div>
                 <div class="frame-212">
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="singupbtn">
-                    <button onclick="register()" class="button-wo-icon text-sm-btn" type="button">Sing Up</button>
+                    <button onclick="register()" class="button-wo-icon text-sm-btn" type="button">Sign Up</button>
                 </div>
             </div>
 
